fix navbar from userSchedule and PsychologistList, fix align of message when user don't have a session, fix biography from PsychologistList

--- a/src/pages/PsychologistList/styles.css
+++ b/src/pages/PsychologistList/styles.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     color: #eee;
-
+    flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: center;
