--- a/src/pages/UserSchedule/styles.css
+++ b/src/pages/UserSchedule/styles.css
@@ -1,7 +1,7 @@
 .userScheduleContainer {
     width: 100%;
     height: 100%;
-
+    flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -43,4 +43,7 @@
     font-size: 24px;
     line-height: 36px;
     margin-bottom: 30px;
+}
+.userScheduleContainer h1{
+    color: #07387e;
 }
